*Empty MediaWiki Message*

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -14,7 +14,6 @@ Press coverage about OpenMoko / Neo1973 :
 *[http://gizmodo.com/gadgets/smartphones/openmoko-smartphone-did-they-have-a-time-machine-or-what-229243.php Gizmodo.com] OpenMoko interface compared to iPhone
 *[http://www.linuxjournal.com/xstatic/abstracts/upfront Linux Journal]  Doc Searls in the feb 2007 issue
 *[http://www.osdir.com/Article9642.phtml OSDir.com] Mobile Linux for the Mobile Fan] -> [http://www.madpenguin.org/cms/?m=show&id=7710 MadPenguin] Mobile Linux for the Mobile Fan
-*[http://zedomax.com/blog/tag/openmoko/fr/ FR News] OpenMoko - le monde premier a intégré la plateforme mobile de communications de source ouverte (an automated translation of *[http://hackedgadgets.com/2007/01/11/openmoko-world%e2%80%99s-first-integrated-open-source-mobile-communications-platform/ Hacked Gadgets] OpenMoko - World’s First Integrated Open Source Mobile Communications Platform)
 *[http://www.usnews.com/usnews/biztech/davesdownload/archive/070112/a_populist_challenge_to_apples.htm US News] A Populist Challenge to Apple's iPhone
 *[http://www.tectonic.co.za/view.php?id=1321 tectonic.co.za] iPhone vs OpenMoko: The open alternative
 *[http://www.informationweek.com/news/showArticle.jhtml?articleID=196802206&subSection=All+Stories InformationWeek] Startup Promises First Linux Smartphone Based On Open Standards
@@ -23,7 +22,6 @@ Press coverage about OpenMoko / Neo1973 :
 *[http://blogs.ft.com/techblog/2007/01/openmoko_harks_.html Financial Times] OpenMoko harks back to Hello Moto
 *[http://hardware.slashdot.org/article.pl?sid=07/01/20/1551200 Slashdot] OpenMoko Schedule Announced
 *[http://www.youtube.com/watch?v=jRvtAAXTIlg Youtube] Interview with Sean Moss-Pultz ([http://www.monoploid.be/dl/openmoko_sean_interview.ogm mirror in Ogg format])
-*[http://www.nyteknik.se/art/48697 NyTeknik] Snart är den öppna Linuxtelefonen här (Swedish) (Translation: this article states free release to selected developers Feb 11, commercial release to developers March 11, and main release to market Sep 11. See also [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html]) 
 *[http://www.libervis.com/article/forget_iphone_hail_openmoko_the_true_revolution Libervis.com] Forget iPhone, hail OpenMoko, the true revolution
 *[http://gizmodo.com/gadgets/smartphones/sizemodo-iphone-vs-openmoko-neo1073-229294.php Gizmodo]iPhone vs. Openmoko Neo1973] (please, don't mind the typo in the title)
 
@@ -46,3 +44,9 @@ Press coverage about OpenMoko / Neo1973 :
 * [http://www.pro-linux.de/news/2007/10833.html pro-linux] OpenMoko-Quellcode angekündigt
 ===== 2007-02-15 =====
 * [http://www.heise.de/newsticker/meldung/85354 heise online] OpenMoko: Linux-Plattform für Handys freigegeben
+
+=== Swedish ===
+*[http://www.nyteknik.se/art/48697 NyTeknik] Snart är den öppna Linuxtelefonen här (Swedish) (Translation: this article states free release to selected developers Feb 11, commercial release to developers March 11, and main release to market Sep 11. See also [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html]) 
+
+=== French ===
+*[http://linuxfr.org/2006/11/08/21596.html LinuxFR] OpenMoko : sortie en janvier d'un téléphone-GPS enfin libre!
