*Empty MediaWiki Message*

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -1,7 +1,9 @@
 {|align=right
   |__TOC__
   |}
-Press coverage about OpenMoko / Neo1973 :
+ '''Press coverage about OpenMoko / Neo1973 :'''
+
+== Languages ==
 
 === English ===
 
@@ -29,10 +31,10 @@ Press coverage about OpenMoko / Neo1973 :
 *[http://gizmodo.com/gadgets/smartphones/sizemodo-iphone-vs-openmoko-neo1073-229294.php Gizmodo]iPhone vs. Openmoko Neo1973] (please, don't mind the typo in the title)
 
 ==== November 2006 Amsterdam release ====
-* http://www.linuxdevices.com/news/NS2986976174.html
-* http://www.linuxdevices.com/news/NS7056478804.html
-* http://lwn.net/Articles/208298/
-* http://www.theinquirer.net/default.aspx?article=35590
+* http://www.linuxdevices.com/news/NS2986976174.html linuxdevices.com] Cheap, hackable Linux smartphone due soon
+* http://www.linuxdevices.com/news/NS7056478804.html linuxdevices.com] First OpenMoKo phone taps dual-licensed SyncML stack
+* http://lwn.net/Articles/208298/ lwn.net] The OpenMoko open phone
+* http://www.theinquirer.net/default.aspx?article=35590 theinquirer.net] A truly open Linux phone with GPS debuts 
 
 === German ===
 ==== 2006 ====
