*Empty MediaWiki Message*

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -1,8 +1,7 @@
 {|align=right
   |__TOC__
   |}
- '''Press coverage about OpenMoko / Neo1973 :'''
-
+This site contains the press coverage about OpenMoko and the Neo 1973 sorted by languages and date.
 == Languages ==
 
 === English ===
