*Empty MediaWiki Message*

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -1,7 +1,7 @@
 {|align=right
   |__TOC__
   |}
-This site contains the press coverage about OpenMoko and the Neo 1973 sorted by languages and date.
+This site contains the press coverage about OpenMoko and the Neo 1973 sorted by language and date.
 == Languages ==
 
 === English ===
