/* 2nd Phase */ add video player

--- a/Applications.mw
+++ b/Applications.mw
@@ -33,6 +33,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 * [[Game]]
 * [[Guitar Tuning]]
 * [[Code Memo]]
+* [[Video Player]]
 
 ==Stylus-Based Applications ==
 
