--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -83,6 +83,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented some day
 * [[Wish List - Hardware]] - A collection of ideas we'd like to see in the next Neo release
 * [[Media Content]] - What types of media on the device can we use (that is non-software)?
+* [[Testimonials]] - How did you get to OpenMoko?
 * [[Buying Interest List]] - Have you have put money aside for Neo1973? Put your nick here.
 
 == Sections by target audience ==
