/* Video-capable camera */  typo

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -3,7 +3,7 @@
 Some small hardware enhancement could be cheap, but very useful. Please add your ideas/wishes here:
 <br \>
 =====Video-capable camera=====
-*preferably in rotatable turret set into top of unit, so it can face in either direction, making it useful for video conferencing. for a phone to stand a chance in the modern market it will need a camera else it is like that it will not be bought.
+*preferably in rotatable turret set into top of unit, so it can face in either direction, making it useful for video conferencing. For a phone to stand a chance in the modern market it will need a camera else it is likely that it won't be bought.
 
 =====Integrated WiFi hardware=====
 *To sync data
