--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -77,7 +77,7 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 *Advantages of a RFID tag? I would see a lot privacy problems
 **The tag could be switched on or off. A nice feature would be a module able to clone tags. This would unfortunately probably be rather expensive.
 
-=====powered USB 2.0 host=====
+=====Powered USB 2.0 host=====
 
 =====UMTS support=====
 
