/* free GPIO ports on a connector to allow easy, simple hardware extensions */

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -96,7 +96,7 @@ Also, the speaker noise does come out the side - look at the grills in the pictu
 
 =====Small metal frame for protection (like Siemens M65, only with more style)=====
 
-=====free GPIO ports on a connector to allow easy, simple hardware extensions=====
+=====Free GPIO ports on a connector to allow easy, simple hardware extensions=====
 
 =====Video acceleration=====
 Hardware acceleration for video playback.
