/* Software Reference Documentation */  64MB should be enough for anyone.

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -40,6 +40,9 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 === Software Reference Documentation ===
 
+* ROM usage.
+** The default set of applications plus several megabytes of user data must fit in the built-in 64MB flash, otherwise the user can't easily change the microSD.
+
 * Architectural
 ** [[OpenMokoFramework]] - The OpenMoko Application Framework
 * Host utilities
