--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -40,7 +40,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 === Software Reference Documentation ===
 
-* ROM usage.
+* FLASH usage.
 ** The default set of applications plus several megabytes of user data must fit in the built-in 64MB flash, otherwise the user can't easily change the microSD.
 
 * Architectural
