/* Software Related: Additional Features */

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -111,6 +111,10 @@ A car is mobile, ideally, when you leave your car, the phone should note the car
 
 As mobile devices may have multiple users, it is not sufficient to always use the last known location.  In this case, the device may additionally have multiple homes.  For example, a car might have as its homes: home garage and work parking lot.
 
+=== Running multiple application ===
+
+It would be a big step to have the ability to run multiple programs like downloading emails and browsing the net or using a calculator and writing a text message and being able to swap between them quickly and formlessly.
+
 == Software Related: Language Bindings ==
 === Python Bindings ===
 Python bindings seem to be a commonly requested feature.  
