--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -57,7 +57,7 @@ Hammerhead AGPS from Global Locate.
 * Connected to: S3C2410 UART2 (full-uart, RxD, TxD, CTS, RTS) /dev/ttySAC1 in userspace
 * Driver: Implemented as userspace agps daemon ([[agpsd]])
 * PM Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/gta01-power_control.patch
-* Externally-accessible GPS antenna jack
+* Externally-accessible GPS antenna connector (specify the kind: SMB, SMA, ..?)
 
 === microSD-Card ===
 
