*Empty MediaWiki Message*

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -118,3 +118,7 @@ Also, as I understand it, there are actually no UV LEDs that will reliably produ
 The most expensive - and they are very expensive - ones produce UV of a sort that may kill very susceptible bacteria, but comparatively few.
 IIRC the LEDs are $20 per.
 --[[User:Speedevil|Speedevil]] 15:11, 16 February 2007 (CET)
+
+=====EPD=====
+
+Or electronic paper display, EPD is used in many new devices such as the new Motorola motofone, sonys new e-reader and Irex's iliad. The technology provides thin, flexible, power saving screens using new eink technology. This technology could cut the weight of the phone and its power usage. For more info see: [http://www.eink.com link title].
