/* Flashing with Linux */

--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -66,6 +66,19 @@ Once you have compiled ftdi_eeprom, you can run
 
 {{warning|Make sure you don't have any other FTDI FT232 / FT2232 based devices attached to the USB while running ftdi_eeprom.  It might be wise to disconnect everything but the debug board}}
 
+You should get something like the following printout if everything was successful:
+<pre>
+FTDI eeprom generator v0.2
+(c) Intra2net AG <opensource@intra2net.com>
+FTDI init: 0
+Unable to find FTDI devices under given vendor/product id: 0x1457/0x5118
+Retrying with default FTDI id.
+Used eeprom space: 102 bytes
+FTDI write eeprom: 0
+Writing to file: neo1973_debug_board_v2.eeprom
+FTDI close: 0
+</pre>
+
 Once the flashing has finished, just disconnect and reconnect, and you should see
 <pre>
 $ lsusb -v -d 0x1457:                                                                                                                                                                                               
