--- a/Video_Player.mw
+++ b/Video_Player.mw
@@ -4,22 +4,17 @@ Not a proper 'app' page, just an overview of my understanding. --[[User:Speedevi
 
 Video is problematic.
 
-The CPU is certainly not fast enough to decode 480*640 video.
-
+On the minus side.
+*The CPU is certainly not fast enough to decode 480*640 video.
+*The display is portrait, which means that an additional rotation step is needed for most landscape video, adding to CPU usage.
+*Downloading an arbitrary video, and playing it without transcoding it, then playing it later will not be possible.
 However.
 
-The LCD can be switched to a 240*320 stretch mode, which is much less taxing.
-
-This is of course portrait, which means that an additional rotation step is needed for most landscape video, which there may not be enough CPU for.
-
-Re-encoding video to rotate it, and scale to 320*240, and encoding with a low CPU use codec such as MPEG-1 may well make half-screen doubled videos playable at 25fps.
-
-If not, then it almost certainly will be possible at 12fps.
+On the positive side.
+*The LCD can be switched to a 240*320 stretch mode, which is much less taxing.
+*Re-encoding video to rotate it, and scale to 320*240, and encoding with a low CPU use codec such as MPEG-1 may well make half-screen doubled videos playable at 25fps.
+*If not, then it almost certainly will be possible at 12fps.
+*Playing most very small - postage stamp - videos as are sent by many phones should be possible.
+*1G of storage should give several hours of mpeg1 video, as the quality can be reduced somewhat without being visible on the screen.
 
 This is not based on benchmarks on the device, but with comparisons of other devices (old laptops with P100 CPUs for example).
-
-Unfortunately, downloading an arbitrary video, and playing it will not be possible.
-
-Playing most very small - postage stamp - videos as are sent by many phones send should be possible.
-
-1G of storage should give several hours of mpeg1 video, as the quality can be reduced somewhat without being visible on the screen.
