/* Mailing Lists */ fixed typo

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -4,7 +4,7 @@ All resources listed here are available to the general public.  Everyone is invi
 
 === Mailing Lists ===
 
-There are a number of development related mailinglsts at http://lists.openmoko.org/
+There are a number of development related mailinglists at http://lists.openmoko.org/
 
 ==== announce@lists.openmoko.org ====
 
