add real hardware info

--- a/Video_Player.mw
+++ b/Video_Player.mw
@@ -15,6 +15,12 @@ On the positive side.
 *Re-encoding video to rotate it, and scale to 320*240, and encoding with a low CPU use codec such as MPEG-1 may well make half-screen doubled videos playable at 25fps.
 *If not, then it almost certainly will be possible at 12fps.
 *Playing most very small - postage stamp - videos as are sent by many phones should be possible.
-*1G of storage should give several hours of mpeg1 video, as the quality can be reduced somewhat without being visible on the screen.
+*1G of storage should give several hours of mpeg4 video, as the quality can be reduced somewhat without being visible on the screen.
 
-This is not based on benchmarks on the device, but with comparisons of other devices (old laptops with P100 CPUs for example).
+From a conversation with XorA, in #openmoko.
+
+400kbps mpeg4 works on a 200Mhz neo (without sound) on prerotated 240*320 ffmpeg codec videos, at 25fps, using stock mplayer.
+
+With sound, this drops to 18fps.
+
+There are optimisations for mplayer that look promising to get 25fps with sound.
