--- a/Video_Player.mw
+++ b/Video_Player.mw
@@ -17,7 +17,7 @@ On the positive side.
 *Playing most very small - postage stamp - videos as are sent by many phones should be possible.
 *1G of storage should give several hours of mpeg4 video, as the quality can be reduced somewhat without being visible on the screen.
 
-From a conversation with XorA, in #openmoko.
+From a conversation with XorA, in [[#openmoko]].
 
 400kbps mpeg4 works on a 200Mhz neo (without sound) on prerotated 240*320 ffmpeg codec videos, at 25fps, using stock mplayer.
 
