/* Q: What are the relevant X11 details? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -128,7 +128,7 @@ by Sean/FIC later.
 
 === Q: What are the relevant X11 details? ===
 
-A: See [http://lists.openmoko.org/pipermail/community/2007-January/001353.html].
+A: See [http://lists.openmoko.org/pipermail/community/2007-January/001353.html xdpyinfo output].
 
 === Q: Does it include a camera? ===
 
