--- a/FAQ.mw
+++ b/FAQ.mw
@@ -193,6 +193,8 @@ For example to search for "release date" from FIC people:
 
  site:openmoko.org "release date" "at fic.com.tw"
 
+Alternatively you can use the [http://www.google.com/coop/cse?cx=017507431580478583395%3Astsl7lhxzbc custom OpenMoko search engine] which has been created using [http://www.google.com/coop/ Google Co-op].
+
 === Q: Are there any LEDs on the Neo 1973? ===
 
 A: The Neo1973 v1 will have no LEDs beside the screen backlight
