you need to disable the getty

--- a/Manually_using_GSM.mw
+++ b/Manually_using_GSM.mw
@@ -15,6 +15,10 @@ This is a short guide how to manually get GSM going.
 * Configure the host's usb0 interface to 192.168.0.200 netmask 255.255.255.0
 * ssh to root@192.168.0.201
 
+=== Disabling the getty ===
+
+Our default images all have a getty running on /dev/ttySAC0, please edit /etc/inittab and disable the getty on that port 
+
 === Powering up the GSM Modem ===
 
 * load the "gta01_pm_gsm.ko" kernel module
