--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -12,6 +12,7 @@ This site contains the press coverage about OpenMoko and the Neo 1973 sorted by 
 *[http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com] Short news article
 *[http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os crunchgear.com] Holding the phone upside down
 *[http://www.slashgear.com/openmoko-and-fic-neo1973-updates-153926.php slashgear.com] Video interview and many pictures
+*[http://www.djlosch.com/article_Comparison%3A_iPhone_vs_A1200_vs_Neo1973 djlosch.com] Article comparing the Neo to the iPhone and A1200
 
 ==== January 2007 ====
 *[http://popsci.typepad.com/ces2007/2007/01/opensource_stri.html Popsci.com] Open Source Strikes Again
