--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -76,7 +76,7 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 =====RFID tag=====
 *Advantages of a RFID tag? I would see a lot privacy problems
 **The tag could be switched on or off. A nice feature would be a module able to clone tags. This would unfortunately probably be rather expensive.
-**What about an RFID Reader which could be used to locate items with RFID tags (IE: in your house) ---
+**What about an RFID Reader which could be used to locate items with RFID tags (IE: in your house) [[User:Alexpb|Alexpb]]
 
 =====Powered USB 2.0 host=====
 
