--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -32,6 +32,7 @@ This enables the phone to sense where 'down' is - to enable various options.
 *[[Computer Mouse]]
 *[[Determine Position]]
 *[[Distance Measuring]]
+Change playlists when I'm jogging vs walking. (there ia an mp3 player on the market that does this).
 
 =====SIR transceiver=====
 *Could be used to detect when to turn off the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
