--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -79,6 +79,7 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 *Advantages of a RFID tag? I would see a lot privacy problems
 **The tag could be switched on or off. A nice feature would be a module able to clone tags. This would unfortunately probably be rather expensive.
 **What about an RFID Reader which could be used to locate items with RFID tags (IE: in your house) [[User:Alexpb|Alexpb]]
+***That would be a nice feature--[[User:Denis std|denis_std]] 08:33, 17 February 2007 (CET)
 
 =====Powered USB 2.0 host=====
 
