/* Integrated WiFi hardware */ Acknowledged a good point

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -12,7 +12,8 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 **I'm willing to port [http://yate.null.ro/ Yate] to it if the Internet connectivity issue is solved --[[User:Csdexter|@Dexter]] 13:58, 16 February 2007 (CET)
 *for videoconferencing (as with AccessGrid)
 *Even 802.11b 11Mbps -only would do -- the point is being able to connect it to the Internet without incurring the (sometimes huge) costs of GPRS or (even worse) HSCSD.
-*To save power have wifi able to wake up and check for ssid then sleep again if not found (i.e. i'm not home) or wake up by GPS location (only come on at home and in the office)
+*To save power have WiFi able to wake up and check for a designated SSID then sleep again if not found (i.e. I'm not home) or wake up by GPS location (only come up at home and in the office)
+**Now '''that''' is a great idea! You could also vary the Tx power of the 802.11 chipset (as in current laptops) depending on current traffic/radio conditions to squeeze even more power off it. --[[User:Csdexter|@Dexter]] 13:56, 17 February 2007 (CET)
 
 =====LED=====
 *A blinking LED would be cheap and low power, good for informing the user about new SMS/Email....
