/* Q: What is the rationale behind the exclusion of WiFi? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -32,7 +32,7 @@ http://www.gtk.org/tutorial/
 
 === Q: What is the rationale behind the exclusion of WiFi? ===
 
-A: See [wiki:OpenMoko/InternetAccess Getting Internet access]
+A: See [[OpenMoko/InternetAccess Getting Internet access]]
 
 === Q: Can I bridge to an Ethernet (wired or unwired) network via a suitable Bluetooth enabled router? ===
 
