--- a/Connecting_Neo_1973_with_Debug_Board_v2.mw
+++ b/Connecting_Neo_1973_with_Debug_Board_v2.mw
@@ -5,7 +5,7 @@
 {{note|Only do this while the Debug Board is unpowered, i.e. the USB Upstream port is not connected}}
 
 === Debug Board v2 connector closed ===
-[Image:Neo1973 debugboard v2 connector closed.jpg|700px]]
+[[Image:Neo1973 debugboard v2 connector closed.jpg|700px]]
 
 === Debug Board v2 connector open ===
 [[Image:Neo1973 debugboard v2 connector open.jpg|700px]]
