/* Wolfson Codec */  clarify for some non-technical users I've spoken to who are confused by the term codec.

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -115,7 +115,7 @@ See also: [[Neo1973 Audio Subsystem]]
 
 ==== Wolfson Codec ====
 
-There's a WM8753 Wolfson Microelectronics Codec.
+There's a WM8753 Wolfson Microelectronics CODEC (This is not a 'smart' codec that can interpret MP3/... it is a simple dumb 'sound card'.
 * Product Homepage: http://www.wolfsonmicro.com/products/WM8753/
 * Data Sheet: http://www.wolfsonmicro.com/uploads/documents/en/WM8753.pdf
 * Connected to: S3C2410 IIS interface (PCM data), S3C2410 I2C (Control)
