/* GTA01Bv4 */  pronoun

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -190,7 +190,7 @@ This is the version that is shipped in Phase 0
 
 ==== GTA01Bv4 ====
 
-This is the version that is shipped in Phase 1
+This is the version that will be shipped in Phase 1
 
 == Distinguishing hardware revisions ==
 
