OpenMoko in wxWidgets GSoC 2007

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -139,5 +139,7 @@ The Maemo folks have created a successful standard for Webpad applications. I'd 
 === wxWidgets Integration ===
 wxWidgets is a cross-platform application framework that's very popular (I'd say, #3 after Qt and Gtk+). On Linux, wxWidgets uses Gtk+ to implement the widgets. It shouldn't be hard to add support for the additional OpenMoko classes to wxWidgets hence supporting the native OpenMoko look and feel for wxWidgets applications.
 
+wxWidgets team wants OpenMoko classes too and we (wxWidgets) plan to include this project as one of our ideas for  [http://google-code-updates.blogspot.com/2007/02/speaking-of-summer.html GSoC 2007]
+
 === SDL Integration ===
 SDL is _the_ game developer library. There are tons of SDL games out there. We should add OpenMoko support into SDL.
