/* Using the Neo1973 as a computer mouse */

--- a/Wishlist%2FComputer_Mouse.mw
+++ b/Wishlist%2FComputer_Mouse.mw
@@ -4,6 +4,8 @@ With an accelerometer the Neo1973 can detect how much it is being moved. It can 
 
 The "mouse" will not require anything to rest on, so it will work in free air. If used in free air, it will probably be useful to have one of the buttons to have the function "ignore input" - just like when you lift a normal mouse from the table. It would be interesting to use this facility when doing a presentation.
 
+It would also be good as a mouse for a laptop that you could use instead to lugging round extra hardware. (Satisfied Perry?)
+
 * I'm not sure why you would want to use an expensive cellphone as a mouse when real mice are very cheap [[User:Perry|Perry]] 14:49, 15 February 2007 (CET)
 
 == 3D mouse ==
