/* Hammerhead on the GTA01 */  Diggerential GPS question.

--- a/Gpsd.mw
+++ b/Gpsd.mw
@@ -68,3 +68,11 @@ At the GTA01, the host processor is a SC2410..
 === Hammerhead on the GTA01 ===
 
 On the GTA01, the Hammerhead are configured that connected with the host processor through the UART. The UART of data output/input is connected to the UART 1 of the SC2410. The UART of the hardware flow control is connected to the UART 2 of the SC2410.
+
+== Q & A ==
+
+
+====Q: Can agpsd support Differential GPS.====
+*While the neo does not have any means of receiving [http://en.wikipedia.org/wiki/Differential_GPS DGPS signals] directly, it can of course download them from the internet (bluetooth, gprs), either from a server, or peer-peer from stationary (charging?) neos that have GPS signal and cheap internet connections.
+*This can generate positions accurate to well under a metre, compared to (probably) 2-3m without.
+*The agpsd is the place that these corrections would need to be done, as they need to be performed on a per-satellite basis, before generating the position.
