--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -13,7 +13,10 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *for videoconferencing (as with AccessGrid)
 *Even 802.11b 11Mbps -only would do -- the point is being able to connect it to the Internet without incurring the (sometimes huge) costs of GPRS or (even worse) HSCSD.
 *To save power have WiFi able to wake up and check for a designated SSID then sleep again if not found (i.e. I'm not home) or wake up by GPS location (only come up at home and in the office)
-**Now '''that''' is a great idea! You could also vary the Tx power of the 802.11 chipset (as in current laptops) depending on current traffic/radio conditions to squeeze even more power off it. --[[User:Csdexter|@Dexter]] 13:56, 17 February 2007 (CET)
+*Variable TX power, to the minimum needed to connect to the AP.
+*Some sort of caching (encrypted?) internet proxy that can store and forward packets. Instead of having the radio constantly on, it turns the radio on every 30s, for just long enough to register with the AP, and ask the proxy if it has new packets for it.
+** An optimisation might be if the hardware, and the AP can do broadcast packets. The reciever is only turned on for .5s/30s, to recieve a broadcast packet saying 'you've got packets'.
+**This slows the initial connection to the phone, but most tcp/ip applications will not time out in 30s.
 
 =====LED=====
 *A blinking LED would be cheap and low power, good for informing the user about new SMS/Email....
