--- a/Wishlist%2FComputer_Mouse.mw
+++ b/Wishlist%2FComputer_Mouse.mw
@@ -1,13 +1,17 @@
-== Using the Neo1973 as a computer mouse ==
+== Using the smartphone as a computer mouse ==
 
-With an accelerometer the Neo1973 can detect how much it is being moved. It can therefore used as a computer mouse. The communication can be either USB or BlueTooth.
+With an accelerometer the smartphone can detect how much it is being moved. It can therefore used as a computer mouse. The communication can be either USB or BlueTooth.
 
-The "mouse" will not require anything to rest on, so it will work in free air. If used in free air, it will probably be useful to have one of the buttons to have the function "ignore input" - just like when you lift a normal mouse from the table. It would be interesting to use this facility when doing a presentation.
+The mouse will not require anything to rest on, so it will work in free air. If used in free air, it will probably be useful to have one of the buttons to have the function "ignore input" - just like when you lift a normal mouse from the table.
 
-It would also be good as a mouse for a laptop that you could use instead to lugging round extra hardware. (Satisfied Perry?)
+== Use scenarios ==
 
-* I'm not sure why you would want to use an expensive cellphone as a mouse when real mice are very cheap [[User:Perry|Perry]] 14:49, 15 February 2007 (CET)
+When doing a presentation you can move more freely and are not required to be close to the computer.
+
+If you travel with your laptop and you prefer using a mouse instead of the builtin pointing device, you will not have to have a bring a mouse in your travel bag: You can use your smartphone that you are probably bringing anyway. 
 
 == 3D mouse ==
 
-With a 3D accelerometer the Neo1973 can even be used as a 3D mouse. Again an "ignore input" is probably needed.
+With a 3D accelerometer the smartphone can even be used as a 3D mouse. Again an "ignore input" button is probably needed.
+
+[[Category:Requires accelerometer]]
