--- a/FAQ.mw
+++ b/FAQ.mw
@@ -32,7 +32,7 @@ http://www.gtk.org/tutorial/
 
 === Q: What is the rationale behind the exclusion of WiFi? ===
 
-A: See [OpenMoko/InternetAccess Getting Internet access]
+A: No low power open source device was available when the neo was designed. Future versions of the device may have wifi. [[Sean Moss-Pultz]]'s [http://lists.openmoko.org/pipermail/community/2006-November/000050.html comment on this]
 
 === Q: Can I bridge to an Ethernet (wired or unwired) network via a suitable Bluetooth enabled router? ===
 
