--- a/FAQ.mw
+++ b/FAQ.mw
@@ -36,7 +36,7 @@ A: No low power open source device was available when the neo was designed. Futu
 
 === Q: Can I bridge to an Ethernet (wired or unwired) network via a suitable Bluetooth enabled router? ===
 
-A: See [wiki:OpenMoko/InternetAccess Getting Internet access]
+A: Yes - see [http://gentoo-wiki.com/HOWTO_Configure_a_bluetooth_network_access_point this howto for how to configure a linux computer to act as such a router].
 
 === Q: How can I compile programs for the Neo1973? ===
 
