/* Q: Does it include a camera? */  fix links.

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -132,7 +132,7 @@ A: See [http://lists.openmoko.org/pipermail/community/2007-January/001353.html x
 
 === Q: Does it include a camera? ===
 
-A: No, see [:OpenMoko/Hardware] for details on what it does include.  With the USB port and a powered hub, you should be able to attach to any external camera.
+A: No, see [[Neo1973_Hardware]] for details on what it does include (and [[Wish_List_-_Hardware]] for what some want in the future.  With the USB port and a powered hub, or bluetooth, you should be able to attach many external cameras.
 
 === Q: What is the battery life? ===
 
