/* Q: Who is eligible to buy a Neo1973 in Phase 1 (developer phase)? */  tidy

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -153,16 +153,17 @@ A: See [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html th
 
 A: These are the official Neo1973 requirements: Phase 1 buyers need to:
 
- * have fun hacking devices
- * find their way through prototype software and hardware without much documentation
- * share the dream of a device powered by free software
- * not expect a consumer-level device
- * come up with new ideas for exploring the age of mobile computing
+ * Have fun hacking devices.
+ * Find their way through prototype software and hardware without much documentation.
+ * Share the dream of a device powered by free software.
+ * Not expect a consumer-level device.
+ * Come up with new ideas for exploring the age of mobile computing.
+ * Have $350.
 
 Ideally they also:
 
- * can spot bugs and submit patches
- * love to cooperate with a community improving the software
+ * Can spot bugs and submit patches.
+ * Love to cooperate with a community improving the software.
 
 (Michael Lauer http://openmoko.org/)
 
