Advanced usage with context menus.

--- a/Wishlist%2FComputer_Mouse.mw
+++ b/Wishlist%2FComputer_Mouse.mw
@@ -1,14 +1,18 @@
 == Using the smartphone as a computer mouse ==
 
-With an accelerometer the smartphone can detect how much it is being moved. It can therefore used as a computer mouse. The communication can be either USB or BlueTooth.
+With an accelerometer the smartphone can detect how much it is being moved. It can therefore be used as a computer mouse. The communication can be either USB (using the normal USB mouse protocol) or BlueTooth (is there a normal BlueTooth protocol for the existing BlueTooth mice?).
 
 The mouse will not require anything to rest on, so it will work in free air. If used in free air, it will probably be useful to have one of the buttons to have the function "ignore input" - just like when you lift a normal mouse from the table.
+
+The mouse buttons will be drawn on the screen.
 
 == Use scenarios ==
 
 When doing a presentation you can move more freely and are not required to be close to the computer.
 
 If you travel with your laptop and you prefer using a mouse instead of the builtin pointing device, you will not have to have a bring a mouse in your travel bag: You can use your smartphone that you are probably bringing anyway. 
+
+Advanced usage would make screen on the smartphone dependant on what is on the computer screen. Context sensitive menus could be shown on the mouse.
 
 == 3D mouse ==
 
