--- a/I2C.mw
+++ b/I2C.mw
@@ -1,2 +1,2 @@
 I2C is a simple communication standard intended to move small amounts of data a few inches between chips.
-See [http://en.wikipedia.org/i2c wikipedia].
+See [http://en.wikipedia.org/wiki/i2c wikipedia].
