--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -7,7 +7,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 == Introduction ==
 
-* [[Introduction]] - What openmoko is.
+* [[Introduction]] - What is OpenMoko.
 ** [[Introduction#Photos|Photos]]
 * [[FAQ | Frequently Asked Questions]]
 
