Added link to "How to run OpenMoko Apps on PC"

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -5,6 +5,10 @@
 This is a guide describing how to set up a running OpenMoko
 system from scratch.
 
+If you just want to run OpenMoko applications on your PC, just perform the
+"Obtaining OpenMoko SVN tree" step below and then go to
+[[How to run OpenMoko Apps on PC]].
+
 Do not treat this as a linear script! There are various configuration items you
 need to set (or skip, as it may be), operations that depend on how your
 host(s) is/are set up, and also on the hardware revision of the target platform
