/* Dump the '''''egg-shaped''''' case design and go '''''rectangular''''' for more screen space */

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -90,6 +90,7 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 =====UMTS support=====
 
 =====Dump the '''''egg-shaped''''' case design and go '''''rectangular''''' for more screen space=====
+*I'm all for devices that look great and have great features - aside from that I really like the current design. Thus I'd like to comment that the design change request is probably not the majority's opinion. [[User:Abraxa|Abraxa]] 00:00, 18 February 2007 (CET)
 
 =====A standard slip-on or clip-on template (possibly with buttons) to make the touch-screen blind accessible=====
 
