--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -37,6 +37,7 @@ This enables the phone to sense where 'down' is - to enable various options.
 *[[Determine Position]]
 *[[Distance Measuring]]
 Change playlists when I'm jogging vs walking. (there ia an mp3 player on the market that does this).
+*Can't the GPS information be used for that purpose? It should be possible to derive the phone's velocity from the change in coordinates over time, so such a playlist profile switcher should be a possibility even now already. [[User:Abraxa|Abraxa]] 00:09, 18 February 2007 (CET)
 
 =====SIR transceiver=====
 *Could be used to detect when to turn off the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
