--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -83,7 +83,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 == Miscellaneous ==
 * [[Press Coverage]] - What the press says about the OpenMoko project
-* [[mFAQ]] - The OpenMoko Misinformation FAQ - What the press '''''incorrectly''''' says about the OpenMoko project
+* [[mFAQ]] - The OpenMoko Misinformation FAQ ('''mFAQ''') - What the press '''''incorrectly''''' says about the OpenMoko project
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented some day
 * [[Wish List - Hardware]] - A collection of ideas we'd like to see in the next Neo release
 * [[Media Content]] - What types of media on the device can we use (that is non-software)?
