/* MMC/SD/SDIO slot (rather than?) miniSD or microSD */

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -62,6 +62,7 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 *Wider selection of accesories, including SDIO accessories.
 *More widely accepted format
 *Only because CF takes too much room (or CF would be the wish, instead)
+*Make externally available so that larger length SDIO cards can be used
 
 =====[[Expansion Back]]=====
 * Replacement backs with additional features
