/* Powered USB 2.0 host */

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -88,7 +88,10 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 **What about an RFID Reader which could be used to locate items with RFID tags (IE: in your house) [[User:Alexpb|Alexpb]]
 ***That would be a nice feature--[[User:Denis std|denis_std]] 08:33, 17 February 2007 (CET)
 
-=====Powered USB 2.0 host=====
+===== USB 2.0 =====
+* Powered
+* Host Mode
+* OTG
 
 =====UMTS support=====
 
