--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -90,7 +90,7 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 
 ===== USB 2.0 =====
 * Powered
-* Host Mode
+* Host Mode / Device Mode
 * OTG
 
 =====UMTS support=====
