--- a/Wishlist%2FProfiles.mw
+++ b/Wishlist%2FProfiles.mw
@@ -1,1 +1,35 @@
-#REDIRECT [[Profiles (Application)]]
+A profile is a set of configurations that determine how the phone handle different events. Example of profiles include:
+
+* Airplane profile (No radio activity)
+* Night (Silent ring tone except for people on the emergency list).
+* Meeting 
+* In business hours (People marked as business contacts get preference)
+* Out of business hours (People marked as business contacts are diverted to voice mail)
+
+=== Travel profile ===
+
+If you travel alot people may not know what timezone you are in. The caller will be assigned a time zone based on the country code of caller id. This can be overridden in contacts. If the caller is not in the same time zone the phone could play a message about the current local time. This will give the caller the option of hanging up if he really did not want to call you at 4 am. The timezone can be computed automatically using [http://www.linuxtogo.org/gowiki/OpenMoko/ideas/SetLocalTime Set Local Time].
+
+=== Profile timeout ===
+
+When you enter a cinema you want the profile to go to cinema-profile. But there is a risk you forget to turn it back to normal. So in the cinema you enable the cinema profile with a timeout for 2 hours. If you do not actively disable it again it will automatically do so after 2 hours, and go back to the profile that is normally defined for this time/place.
+
+=== Location based profile ===
+
+Based on the location automatically switch profile. If you are at the location called 'Work' switch to the profile 'At work'. If you are at the location called 'Home' switch to the profile 'At home'.
+
+=== Usage warning ===
+
+(This is not really a profile - maybe an option for place new call/send new text message?).
+
+Phone companies have different plans. These plans often contain some allotted minutes and text messages per month. The smartphone will need to know the price for calls. The smartphone can keep a record of calls and messages, and give a warning when the low priced minutes are up.
+
+=== Kid mode ===
+
+Like usage warning, but placing new calls/sending new text messages will be block except for some white listed numbers (numbers of the parents).
+
+=== Identity ===
+
+As discussed on P2PMobileSharing, your profile would also specify which Contact was you. So you may have a business card, personal card, or info at certain conventions/venues. This would then be the card that is shared via Bluetooth when you want to exchange vCard info with others on their mobiles/PDA's.
+
+[[Category:ideas]]
