*Empty MediaWiki Message*

--- a/Wishlist%2FProfiles.mw
+++ b/Wishlist%2FProfiles.mw
@@ -8,7 +8,7 @@ A profile is a set of configurations that determine how the phone handle differe
 
 === Travel profile ===
 
-If you travel alot people may not know what timezone you are in. The caller will be assigned a time zone based on the country code of caller id. This can be overridden in contacts. If the caller is not in the same time zone the phone could play a message about the current local time. This will give the caller the option of hanging up if he really did not want to call you at 4 am. The timezone can be computed automatically using [http://www.linuxtogo.org/gowiki/OpenMoko/ideas/SetLocalTime Set Local Time].
+If you travel alot people may not know what timezone you are in. The caller will be assigned a time zone based on the country code of caller id. This can be overridden in contacts. If the caller is not in the same time zone the phone could play a message about the current local time. This will give the caller the option of hanging up if he really did not want to call you at 4 am. The timezone can be computed automatically using [[Set Local Time]].
 
 === Profile timeout ===
 
