--- a/FAQ.mw
+++ b/FAQ.mw
@@ -32,7 +32,12 @@ http://www.gtk.org/tutorial/
 
 === Q: What is the rationale behind the exclusion of WiFi? ===
 
-A: No low power open source device was available when the neo was designed. Future versions of the device may have wifi. [[Sean Moss-Pultz]]'s [http://lists.openmoko.org/pipermail/community/2006-November/000050.html comment on this]
+A: No suitable low power open source WiFi device was available when the Neo1973 was designed. A closed source WiFi device would have been restrictive for developers and users alike. The form of wireless connectivity that is included in the Neo1973 is Bluetooth. An option that has been discussed on the mailing list(s) is to use a USB WiFi adapter. (however, the USB on the Neo1973 is unpowered.)
+
+Neo1973 is (hopefully) the first in a long line of devices that can run OpenMoko. Future versions of the device may have wifi. 
+
+See also:
+[[Sean Moss-Pultz]]'s [http://lists.openmoko.org/pipermail/community/2006-November/000050.html comment on this]
 
 === Q: Can I bridge to an Ethernet (wired or unwired) network via a suitable Bluetooth enabled router? ===
 
