--- a/Wishlist%2FProfiles.mw
+++ b/Wishlist%2FProfiles.mw
@@ -18,6 +18,14 @@ When you enter a cinema you want the profile to go to cinema-profile. But there 
 
 Based on the location automatically switch profile. If you are at the location called 'Work' switch to the profile 'At work'. If you are at the location called 'Home' switch to the profile 'At home'.
 
+=== Identity ===
+
+As discussed on P2PMobileSharing, your profile would also specify which Contact was you. So you may have a business card, personal card, or info at certain conventions/venues. This would then be the card that is shared via Bluetooth when you want to exchange vCard info with others on their mobiles/PDA's.
+
+=== Override profile ===
+
+If the current profile makes the phone ring silent or divert caller to voice mail, then caller can override this and have the phone ring anyways (e.g. by pressing #). Caller must be on callee's white list to do so.
+
 === Usage warning ===
 
 (This is not really a profile - maybe an option for place new call/send new text message?).
@@ -28,8 +36,5 @@ Phone companies have different plans. These plans often contain some allotted mi
 
 Like usage warning, but placing new calls/sending new text messages will be block except for some white listed numbers (numbers of the parents).
 
-=== Identity ===
-
-As discussed on P2PMobileSharing, your profile would also specify which Contact was you. So you may have a business card, personal card, or info at certain conventions/venues. This would then be the card that is shared via Bluetooth when you want to exchange vCard info with others on their mobiles/PDA's.
 
 [[Category:ideas]]
