--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -1,58 +1,57 @@
 {|align=right
   |__TOC__
   |}
-This site contains the press coverage about OpenMoko and the Neo 1973 sorted by language and date.
+This site contains the press coverage about OpenMoko and the Neo 1973 sorted by language and date. Newest on top.
 == Languages ==
 
 === English ===
 
 ==== February 2007 ====
-*[http://www.linuxdevices.com/news/NS2657814070.html linuxdevices.com] Quick interview with Sean and some pictures
-*[http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php gizmodo.com] Photos and comments on hardware and software
-*[http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com] Short news article
-*[http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os crunchgear.com] Holding the phone upside down
-*[http://www.slashgear.com/openmoko-and-fic-neo1973-updates-153926.php slashgear.com] Video interview and many pictures
-*[http://www.djlosch.com/article_Comparison%3A_iPhone_vs_A1200_vs_Neo1973 djlosch.com] Article comparing the Neo to the iPhone and A1200
+* [http://www.linuxdevices.com/news/NS2657814070.html linuxdevices.com] Quick interview with Sean and some pictures
+* [http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php gizmodo.com] Photos and comments on hardware and software
+* [http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com] Short news article
+* [http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os crunchgear.com] Holding the phone upside down
+* [http://www.slashgear.com/openmoko-and-fic-neo1973-updates-153926.php slashgear.com] Video interview and many pictures
+* [http://www.djlosch.com/article_Comparison%3A_iPhone_vs_A1200_vs_Neo1973 djlosch.com] Article comparing the Neo to the iPhone and A1200
 * [http://popsci.typepad.com/popsci/2007/02/up_close_and_pe.html popsci.typepad.com] Screenshot of Linux booting on the Neo
 
 ==== January 2007 ====
-*[http://popsci.typepad.com/ces2007/2007/01/opensource_stri.html Popsci.com] Open Source Strikes Again
-*[http://gizmodo.com/gadgets/smartphones/openmoko-smartphone-did-they-have-a-time-machine-or-what-229243.php Gizmodo.com] OpenMoko interface compared to iPhone
-*[http://www.linuxjournal.com/xstatic/abstracts/upfront Linux Journal]  Doc Searls in the feb 2007 issue
-*[http://www.osdir.com/Article9642.phtml OSDir.com] Mobile Linux for the Mobile Fan] -> [http://www.madpenguin.org/cms/?m=show&id=7710 MadPenguin] Mobile Linux for the Mobile Fan
-*[http://www.usnews.com/usnews/biztech/davesdownload/archive/070112/a_populist_challenge_to_apples.htm US News] A Populist Challenge to Apple's iPhone
-*[http://www.tectonic.co.za/view.php?id=1321 tectonic.co.za] iPhone vs OpenMoko: The open alternative
-*[http://www.informationweek.com/news/showArticle.jhtml?articleID=196802206&subSection=All+Stories InformationWeek] Startup Promises First Linux Smartphone Based On Open Standards
-*[http://www.theregister.co.uk/2007/01/15/open_phone/ The Register] Open Phones with Open Moko
-*[http://techreport.com/onearticle.x/11589 The Tech Report] OpenMoko offers open-source smart phone
-*[http://blogs.ft.com/techblog/2007/01/openmoko_harks_.html Financial Times] OpenMoko harks back to Hello Moto
-*[http://hardware.slashdot.org/article.pl?sid=07/01/20/1551200 Slashdot] OpenMoko Schedule Announced
-*[http://www.youtube.com/watch?v=jRvtAAXTIlg Youtube] Interview with Sean Moss-Pultz ([http://www.monoploid.be/dl/openmoko_sean_interview.ogm mirror in Ogg format])
-*[http://www.libervis.com/article/forget_iphone_hail_openmoko_the_true_revolution Libervis.com] Forget iPhone, hail OpenMoko, the true revolution
-*[http://gizmodo.com/gadgets/smartphones/sizemodo-iphone-vs-openmoko-neo1073-229294.php Gizmodo]iPhone vs. Openmoko Neo1973] (please, don't mind the typo in the title)
+* [http://popsci.typepad.com/ces2007/2007/01/opensource_stri.html Popsci.com] Open Source Strikes Again
+* [http://gizmodo.com/gadgets/smartphones/openmoko-smartphone-did-they-have-a-time-machine-or-what-229243.php Gizmodo.com] OpenMoko interface compared to iPhone
+* [http://www.linuxjournal.com/xstatic/abstracts/upfront Linux Journal]  Doc Searls in the feb 2007 issue
+* [http://www.osdir.com/Article9642.phtml OSDir.com] Mobile Linux for the Mobile Fan] -> [http://www.madpenguin.org/cms/?m=show&id=7710 MadPenguin] Mobile Linux for the Mobile Fan
+* [http://www.usnews.com/usnews/biztech/davesdownload/archive/070112/a_populist_challenge_to_apples.htm US News] A Populist Challenge to Apple's iPhone
+* [http://www.tectonic.co.za/view.php?id=1321 tectonic.co.za] iPhone vs OpenMoko: The open alternative
+* [http://www.informationweek.com/news/showArticle.jhtml?articleID=196802206&subSection=All+Stories InformationWeek] Startup Promises First Linux Smartphone Based On Open Standards
+* [http://www.theregister.co.uk/2007/01/15/open_phone/ The Register] Open Phones with Open Moko
+* [http://techreport.com/onearticle.x/11589 The Tech Report] OpenMoko offers open-source smart phone
+* [http://blogs.ft.com/techblog/2007/01/openmoko_harks_.html Financial Times] OpenMoko harks back to Hello Moto
+* [http://hardware.slashdot.org/article.pl?sid=07/01/20/1551200 Slashdot] OpenMoko Schedule Announced
+* [http://www.youtube.com/watch?v=jRvtAAXTIlg Youtube] Interview with Sean Moss-Pultz ([http://www.monoploid.be/dl/openmoko_sean_interview.ogm mirror in Ogg format])
+* [http://www.libervis.com/article/forget_iphone_hail_openmoko_the_true_revolution Libervis.com] Forget iPhone, hail OpenMoko, the true revolution
+* [http://gizmodo.com/gadgets/smartphones/sizemodo-iphone-vs-openmoko-neo1073-229294.php Gizmodo]iPhone vs. Openmoko Neo1973] (please, don't mind the typo i n the title)
 
-==== November 2006 Amsterdam release ====
-*[http://www.linuxdevices.com/news/NS2986976174.html linuxdevices.com] Cheap, hackable Linux smartphone due soon
-*[http://www.linuxdevices.com/news/NS7056478804.html linuxdevices.com] First OpenMoKo phone taps dual-licensed SyncML stack
-*[http://lwn.net/Articles/208298/ lwn.net] The OpenMoko open phone
-*[http://www.theinquirer.net/default.aspx?article=35590 theinquirer.net] A truly open Linux phone with GPS debuts
+==== November 2006 ====
+* [http://www.linuxdevices.com/news/NS2986976174.html linuxdevices.com] Cheap, hackable Linux smartphone due soon
+* [http://www.linuxdevices.com/news/NS7056478804.html linuxdevices.com] First OpenMoKo phone taps dual-licensed SyncML stack
+* [http://lwn.net/Articles/208298/ lwn.net] The OpenMoko open phone
+* [http://www.theinquirer.net/default.aspx?article=35590 theinquirer.net] A truly open Linux phone with GPS debuts
 
 === German ===
-==== 2006 ====
-===== 2006-08-11 =====
+
+==== February 2007 ====
+* [http://www.heise.de/tr/artikel/85138 Technology Review] Open-Source-Handy, nächster Versuch
+* [http://www.pro-linux.de/news/2007/10833.html pro-linux] OpenMoko-Quellcode angekündigt
+* [http://www.heise.de/newsticker/meldung/85354 heise online] OpenMoko: Linux-Plattform für Handys freigegeben
+
+==== November 2006 ====
+
 * [http://golem.de/0611/48824.html golem.de] OpenMoko kündigt Open-Source-Handy an
 * [http://www.heise.de/newsticker/meldung/80714 heise online] Smartphone mit offener Linux-Plattform
 * [http://www.pro-linux.de/news/2006/10448.html pro-linux] Offenes Linux-Smartphone »OpenMoko« für Januar 2007 angekündigt
 
-==== 2007 ====
-===== 2007-02-13 =====
-* [http://www.heise.de/tr/artikel/85138 Technology Review] Open-Source-Handy, nächster Versuch
-* [http://www.pro-linux.de/news/2007/10833.html pro-linux] OpenMoko-Quellcode angekündigt
-===== 2007-02-15 =====
-* [http://www.heise.de/newsticker/meldung/85354 heise online] OpenMoko: Linux-Plattform für Handys freigegeben
-
 === Swedish ===
-*[http://www.nyteknik.se/art/48697 NyTeknik] Snart är den öppna Linuxtelefonen här (Swedish) (Translation: this article states free release to selected developers Feb 11, commercial release to developers March 11, and main release to market Sep 11. See also [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html]) 
+* [http://www.nyteknik.se/art/48697 NyTeknik] Snart är den öppna Linuxtelefonen här (Swedish) (Translation: this article states free release to selected developers Feb 11, commercial release to developers March 11, and main release to market Sep 11. See also [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html]) 
 
 === French ===
-*[http://linuxfr.org/2006/11/08/21596.html LinuxFR] OpenMoko : sortie en janvier d'un téléphone-GPS enfin libre!
+* [http://linuxfr.org/2006/11/08/21596.html LinuxFR] OpenMoko : sortie en janvier d'un téléphone-GPS enfin libre!
