/* Q: Why is only USB 1.1 provided? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -71,7 +71,7 @@ powerful DC/DC step-up converter to provide the 5V power supply to the
 USB bus.  And you have to provide at least up to 100mA - but to support
 all devices, 500mA.
 
-It's not a technical problem per se.
+It's not a technical problem, <i>per se</i>.
 
 It's just that you have to have one extra (powerful) DC/DC step-up
 converter in the device, something that vendors of phones (and other
