/* Q: Can the Neo charge and use devices on a USB hub at the same time? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -87,7 +87,7 @@ If you plug the Neo into an UPSTREAM port of any powered USB hub,
 you can access any (low-speed,full-speed) usb device on that hub but the NEO will not charge.
 This is because UPSTREAM ports on USB hubs are not powered.
 
-FIC product development is looking in providing something that
+FIC product development is looking into providing something that
 conveniently solves this problem.
 
 === Q: What are the details of the USB port on the Neo1973? How does it compare to USB On-The-Go? ===
