/* Q: Will OpenMoko "Just Work" with Mac OS X? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -107,14 +107,14 @@ A: There has been some discussion of this on the mailing list. There is motivati
 Not being a Mac OS X user, I don't know enough
 to summarize the discussion to answer this question. Can someone please fill in?
 
-A: For IP over USB cable connectivity, it is planned to improve/adapt the AJZaurusUSB driver allowing to ssh into the OpenMoko
+A: For IP over USB cable connectivity, it is planned to improve/adapt the AJZaurusUSB driver, allowing ssh into the OpenMoko.
 
 A: It is expected that (Bluetooth/UB) SyncML based interoperation for
 contacts and events can easily be achieved by a patch
 to the Apple iSync configuration tables.
 
 A: There is an open source implementation of Cocoa (GNUstep) that aims to run MacOS X compatible applications (sort of
-PPC/x86/ARM universal binaries) on OpenMoko devices: mySTEP
+PPC/x86/ARM universal binaries) on OpenMoko devices: mySTEP.
 
 === Q: Can PalmOS apps applications be port to run on OpenMoko? ===
 
