--- a/FAQ.mw
+++ b/FAQ.mw
@@ -116,13 +116,13 @@ to the Apple iSync configuration tables.
 A: There is an open source implementation of Cocoa (GNUstep) that aims to run MacOS X compatible applications (sort of
 PPC/x86/ARM universal binaries) on OpenMoko devices: mySTEP.
 
-=== Q: Can PalmOS apps applications be port to run on OpenMoko? ===
+=== Q: Can PalmOS apps applications be ported to run on OpenMoko? ===
 
 A: Making legacy apps written for the "Garnet" OS (née "Palm OS") run on Linux
 is decidedly non-trivial. An emulator for this is going to be part of the
 ACCESS Linux Platform.
 
-PalmOS uses a very different model from Linux:  it doesn't really have a concept of a file per se; instead, all of memory is seen as a "soup" of records to access and manipulate (this isn't strictly true, as files had to be grafted on when removable flash was supported.  But it's close enough, from a developer's standpoint).  Also, the GUI toolkit looks very, very different from GTK.  The result is that a very well-written, modular program that carefully separates its core algorithms from its user interface and data input and output can be ported by replacing those components.  A program written by a mere mortal programmer is likely to have all these components intertwined to a point that a port will be challenging to say the least.
+PalmOS uses a very different model from Linux:  it doesn't really have a concept of a file, <i>per se</i>; instead, all memory is seen as a "soup" of records to access and manipulate (this isn't strictly true, as files had to be grafted on when removable flash was supported, but it's close enough, from a developer's standpoint).  Also, the GUI toolkit looks very, very different from GTK.  The result is that a very well-written, modular program that carefully separates its core algorithms from its user interface and data input and output can be ported by replacing those components.  A program written by a mere mortal programmer is likely to have all these components intertwined to a point that a port will be challenging to say the least.
 
 The ACCESS Linux Platform will include POSE, an emulator that simulates a Palm device on a Linux host.  This emulator has been around a long time; one expects that it will also run on OpenMoko, but this has to be considered a short-term bandaid rather than a long-term solution.
 
