/* Q: Are there any LEDs on the Neo 1973? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -200,4 +200,4 @@ Alternatively you can use the [http://www.google.com/coop/cse?cx=017507431580478
 
 === Q: Are there any LEDs on the Neo 1973? ===
 
-A: The Neo1973 v1 will have no LEDs beside the screen backlight
+A: The Neo1973 v1 will have no LEDs besides the screen backlight.
