/* Q: What are the details of the USB port on the Neo1973? How does it compare to USB On-The-Go? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -92,14 +92,10 @@ conveniently solves this problem.
 
 === Q: What are the details of the USB port on the Neo1973? How does it compare to USB On-The-Go? ===
 
-A: The Neo1973 will have mini-USB-B. It will NOT be USB On-The-Go. 
-OTG is a complex specification, and it comprises way more than just
-a AB socket, but also electrical and software components which cannot be
-provide by the S3C2410.
+A: The Neo1973 will have mini-USB-B, and will be able to function as either a host or a device. It will NOT be USB On-The-Go.   OTG is a complex specification, and it comprises way more than just
+a AB socket, but also electrical and software components which cannot be provide by the S3C2410.
 
-You will need a special Mini-B to regular-B cable. 
-(Can someone specify what the "special" requirement is? 
-How is this different from a standared Mini-B to regular-B cable?)
+You will need a special Mini-B to regular-B cable (note that this won't actually comply with the USB standard:  a compliant cable has to have an A or Mini-A plug on one end, and B or Mini-B on the other).
 
 === Q: Will OpenMoko "Just Work" with Mac OS X? ===
 
