/* Painless SDK installation & Setup */

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -2,7 +2,7 @@ This article is a place to collect various thoughts about the future of the [[Op
 
 == Development Related ==
 === Painless SDK installation & Setup ===
-Our goal should be a completely painless setup for somebody wanted to develop using [[OpenMoko]]
+Our goal should be a completely painless setup for somebody wanting to develop using [[OpenMoko]]
 
 * one command for installation (apt-get install openmoko)
 * one command to start Xnest (openmoko-xephyr?)
