--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -38,7 +38,7 @@ In the future there could be complete, unofficial "product images" that are crea
 I'd like to see U-Boot being enhanced to support a boot menu that allows to boot a complete image from the MMC. This way we have a simple way for part-time developers (aka people actually _using_ their phone or people not having a seperate phone for development) to experiment with new OpenMoko releases or custom images.
 
 === Printing Support ===
-It would be really neat to be able to print over either bluetooth or USB. I could imagine wanted to print:
+It would be really neat to be able to print over either bluetooth or USB. I can imagine wanting to print:
 
 * Notes
 * Maps
