/* Q: What providers in the USA provide the GSM required for Neo 1973? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -49,9 +49,7 @@ A: See [wiki:OpenMoko/ToolChain the Tool Chain]
 
 === Q: What providers in the USA provide the GSM required for Neo 1973? ===
 
-A: Wikipedia has a list of providers and technologies at
-http://en.wikipedia.org/wiki/List_of_United_States_mobile_phone_companies
-A brief look gives the impression that T-Mobile and Cingular (which is
+A: Wikipedia has a list of providers and technologies [http://en.wikipedia.org/wiki/List_of_United_States_mobile_phone_companies here]. A brief look gives the impression that T-Mobile and Cingular (which is
 renaming itself AT&T) seem to be the only major ones.
 
 === Q: Why is only USB 1.1 provided? ===
