/* Q: How can I compile programs for the Neo1973? */

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -45,7 +45,7 @@ A: Yes - see [http://gentoo-wiki.com/HOWTO_Configure_a_bluetooth_network_access_
 
 === Q: How can I compile programs for the Neo1973? ===
 
-A: See [Toolchain the Tool Chain]
+A: See [wike://Toolchain the Tool Chain]
 
 === Q: What providers in the USA provide the GSM required for Neo 1973? ===
 
